// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YAML with comments 1`] = `
[
  {
    "comment": {
      "description": "Your name",
      "key": "name",
      "required": true,
      "type": "string",
    },
    "key": "name",
    "value": "Jul",
  },
  {
    "key": "age",
    "value": "42",
  },
  {
    "children": [
      {
        "comment": {
          "description": "Your country",
          "key": "country",
          "required": false,
          "type": "string",
        },
        "key": "country",
        "value": "FR",
      },
    ],
    "key": "location",
    "type": "object",
  },
]
`;

exports[`YAML with nestedcomments 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "comment": {
              "description": "The mother's name",
              "key": "name",
              "required": true,
              "type": "string",
            },
            "key": "name",
          },
          {
            "children": [
              {
                "comment": {
                  "description": "The mother mother's name",
                  "key": "name",
                  "required": false,
                  "type": "string",
                },
                "key": "name",
              },
            ],
            "comment": {
              "description": "The mother's mother",
              "key": "mother",
              "required": false,
              "type": "object",
            },
            "key": "mother",
            "type": "object",
          },
        ],
        "comment": {
          "description": "The mother",
          "key": "mother",
          "required": true,
          "type": "object",
        },
        "key": "mother",
        "type": "object",
      },
    ],
    "key": "family",
    "type": "object",
  },
]
`;

exports[`YAML with sections 1`] = `
[
  {
    "children": [
      {
        "comment": {
          "description": "The mother",
          "key": "mother",
          "required": false,
          "type": "object",
        },
        "key": "mother",
      },
    ],
    "comment": {
      "description": "family blablab",
    },
    "key": "family",
    "type": "object",
  },
]
`;

exports[`YAML without comment 1`] = `
[
  {
    "key": "name",
    "value": "Jul",
  },
  {
    "key": "age",
    "value": "42",
  },
  {
    "children": [
      {
        "key": "country",
        "value": "FR",
      },
    ],
    "key": "location",
    "type": "object",
  },
]
`;
